@@ -12,7 +12,7 @@ Module::Build->new(
     },
     requires           => {
         'SVN::Notify'    => '2.70',
-        'Text::Markdown' => 0,
+        'Text::Markdown' => '1.0.4',
         'HTML::Entities' => 0,
     },
     recommends         => {
